# eigenopt

./: .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classApp-members.html  classApp.html  classApp.js  classApp__coll__graph.map  classApp__inherit__graph.md5  classEigenOpt_1_1quadratic__programming_1_1Solver-members.html  classEigenOpt_1_1quadratic__programming_1_1Solver.html  classEigenOpt_1_1quadratic__programming_1_1Solver.js  classes.html  dir_000004_000003.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8156d74b028a4f82dac7eabab267c398.html  dir_b03bea8cf5f780d7f37cc692336ec51a.html  dir_b03bea8cf5f780d7f37cc692336ec51a.js  dir_b03bea8cf5f780d7f37cc692336ec51a_dep.map  dir_b03bea8cf5f780d7f37cc692336ec51a_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  example__pixel__robot_8cpp.html  example__pixel__robot_8cpp.js  example__pixel__robot_8cpp__incl.map  example__pixel__robot_8cpp__incl.md5  example__pixel__robot_8cpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  (+121 more)
.github/workflows/: cmake-build-doc.yaml  cmake-run-tests.yaml
build_web/: CMakeCache.txt
cmake/: EigenOptConfig.cmake.in
doc/: doxyfile.in  mathjax_config.js
doc/extra/: main_page.md  namespaces.dox
include/EigenOpt/: kernel_projection.hpp  kernel_projection.hxx  quadratic_programming.hpp  quadratic_programming.hxx  quadratic_programming_debug.hpp  simplex.hpp  simplex.hxx  simplex_debug.hpp  simplex_internal.hpp  simplex_internal.hxx  typedefs.hpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  (+6 more)
src/: example_pixel_robot.cpp  qp_example.cpp  readme_example.cpp  simplex_example.cpp
test/: CMakeLists.txt  test_qp.cpp  test_simplex.cpp
test/problems/: README.md  lp_1.txt  lp_10.txt  lp_100.txt  lp_101.txt  lp_102.txt  lp_103.txt  lp_104.txt  lp_105.txt  lp_106.txt  lp_107.txt  lp_108.txt  lp_109.txt  lp_11.txt  lp_110.txt  lp_111.txt  lp_112.txt  lp_113.txt  lp_114.txt  lp_115.txt  lp_116.txt  lp_117.txt  lp_118.txt  lp_119.txt  lp_12.txt  lp_120.txt  lp_121.txt  lp_122.txt  lp_123.txt  lp_124.txt  lp_125.txt  lp_126.txt  lp_127.txt  lp_128.txt  lp_129.txt  lp_13.txt  lp_130.txt  lp_131.txt  lp_132.txt  lp_133.txt  (+335 more)
